--- a/homepage.html
+++ b/homepage.html
@@ -9,14 +9,14 @@
     <nav class="top level nav">
         <ul>
           <li><a href=".\homepage.html">Home</a></li>
-          <li><a href="">Topic</a></li>
+          <li><a href=".\placeholder.html">Topic</a></li>
           <li><a href=".\research.html">Research</a></li>
           <li><a href=".\data.html">Data</a></li>
-          <li><a href="">References</a></li>
-          <li><a href="">Style</a></li>
-          <li><a href="">Layout</a></li>
-          <li><a href="">Modality</a></li> 
-          <li><a href="">Professionalization</a></li>
+          <li><a href=".\placeholder.html">References</a></li>
+          <li><a href=".\placeholder.html">Style</a></li>
+          <li><a href=".\placeholder.html">Layout</a></li>
+          <li><a href=".\placeholder.html">Modality</a></li> 
+          <li><a href=".\placeholder.html">Professionalization</a></li>
         </ul>
       </nav>
       
