added placeholder page with link to home

--- a/placeholder.html
+++ b/placeholder.html
@@ -6,6 +6,9 @@
     <title>Research</title>
 </head>
 <body>
+
+    <h1> This is a placehlder page</h1>
+    <a href=".\homepage.html"> Return Home</a></li>
     
 </body>
 </html>
