--- a/data.html
+++ b/data.html
@@ -6,6 +6,21 @@
     <title>Data</title>
 </head>
 <body>
+
+    <nav class="top level nav">
+        <ul>
+          <li><a href=".\homepage.html">Home</a></li>
+          <li><a href=".\placeholder.html">Topic</a></li>
+          <li><a href=".\research.html">Research</a></li>
+          <li><a href=".\data.html">Data</a></li>
+          <li><a href=".\placeholder.html">References</a></li>
+          <li><a href=".\placeholder.html">Style</a></li>
+          <li><a href=".\placeholder.html">Layout</a></li>
+          <li><a href=".\placeholder.html">Modality</a></li> 
+          <li><a href=".\placeholder.html">Professionalization</a></li>
+        </ul>
+      </nav>
+      
     <h1> How to organize and analyze research data</h1>
 </body>
 </html>
