--- a/research.html
+++ b/research.html
@@ -6,6 +6,34 @@
     <title>Research</title>
 </head>
 <body>
+
+    <nav class="top level nav">
+        <ul>
+          <li><a href=".\homepage.html">Home</a></li>
+          <li><a href=".\placeholder.html">Topic</a></li>
+          <li><a href=".\research.html">Research</a></li>
+          <li><a href=".\data.html">Data</a></li>
+          <li><a href=".\placeholder.html">References</a></li>
+          <li><a href=".\placeholder.html">Style</a></li>
+          <li><a href=".\placeholder.html">Layout</a></li>
+          <li><a href=".\placeholder.html">Modality</a></li> 
+          <li><a href=".\placeholder.html">Professionalization</a></li>
+        </ul>
+      </nav>
+      
     <h1>Realistic Research: University, Web-based, and Local Resources</h1>
+
+    <p> This lesson is meant for students who must begin research in their 
+        first semester of the TCID, IA, or the Ph.D. in Technical Communication 
+        program who want to develop, improve, or refresh their research skills. 
+        Additionally, this lesson is designed to give students strategies which 
+        will help them research more efficiently.</p>
+
+    <h2> Content Areas</h2>
+
+    <p> This lesson will help you learn to acquire research resources through a review 
+        of the following areas</p>
+
+    <h3> Getting Started</h3>
 </body>
 </html>
