more info on reserach page

--- a/research.html
+++ b/research.html
@@ -20,7 +20,7 @@
           <li><a href=".\placeholder.html">Professionalization</a></li>
         </ul>
       </nav>
-      
+
     <h1>Realistic Research: University, Web-based, and Local Resources</h1>
 
     <p> This lesson is meant for students who must begin research in their 
@@ -35,5 +35,32 @@
         of the following areas</p>
 
     <h3> Getting Started</h3>
+        <ul> 
+            <li> Learn how to access IIT library services</li>
+            <li> Learn basic functionality on the IIT library website</li>
+        </ul>
+
+    <h3> Research Timelines</h3>
+        <ul> 
+            <li> Learn how to formulate a timeline </li>
+            <li> Learn how to use your timeline to determine the best way to obtain resources </li>
+        </ul>
+
+    <h3> Requesting Resources </h3>
+        <ul>
+            <li> Learn how to request articles from other libraries</li>
+            <li> Learn how to request books from other libraries</li>
+        </ul>
+
+    <h3> Local libraries </h3>
+        <ul> 
+            <li> Learn how to access local libraries</li>
+            <li> Learn when to utilize local libraries over interlibrary loan</li>
+        </ul>
+    
+    <h3> Finding Resources on the Web</h3>
+        <ul> 
+            <li> Reveiew web-based research tools and their uses</li>
+        </ul>
 </body>
 </html>
