--- a/research.html
+++ b/research.html
@@ -70,6 +70,7 @@
     <h3> Accessing Library Services</h3>
 
     <p> If you are a newly admitted student and you have not obtained an IIT Hawk Card, details for doing so can be found at the Hawk Card Homepage. You will need your Hawk Card number to access some library services</p>
+
     <p> Even if you don't have a Hawk Card, you can still access online journals and perform all of the search functions through the library website. You will only need your Hawk Card to check out materials in person at the Galvin Library or request materials through interlibrary loan. Let's take a look at how to get started.</p>
 
     <h3> Using myIIT to Access the Library Website</h3>
@@ -80,5 +81,28 @@
         <img src="research2.jpg" alt="Illinois Institute of Technology Library Website " />
         <figcaption>The Library Services icon leads you to the library search website</figcaption>
       </figure>
+
+    <p>Accessing the library website through myIIT allows a proxy server connection which will enable you to access most resources without reentering your login information.</p>
+
+    <p> Once you are at the library website, you will see a variety of search options available on the left-hand navigation bar.</p>
+
+    <p> The best place to begin researching is in a scholarly database that allows you to search multiple scholarly journals at once, such as Academic Search Premiere (EBSCO).</p> 
+
+
+    <h2> Research Timelines</h2>
+    <h3> Formulating a Timeline</h3>
+
+    <p> It is important to first consider your due date when thinking about requesting resources. You must have enough time to read the material, integrate it into your project or paper, and still have time to finish your assignment. In general, consider this formula when determining whether it is realistic to use a resource for your paper:    </p>
+
+    <p> <strong> Time to obtain resource + Time to read resource + Time to integrate resource into your project < Remaining time before deadline</strong></p>
+
+    <p> Let's unpack some of those terms</p>
+
+    <ul> 
+        <li> <Strong> Time to obtain resource: </Strong> How long will it take for the resource to arrive via interlibrary loan? -or- How long will it take for you to physically obtain the resource?</li>
+        <li> <Strong> Time to read resource: </Strong> How long will it take you to read the book or article? Are you at a point in your project where you must begin to write if you want to finish on time?</li>
+        <li> <Strong> Time to integrate resource into your project:</Strong> Even if you are able to read the resource, do you have enough time to identify pertinent information and incorporate that information into your project? If your paper is already written, do you have enough time to restructure it to allow for discussion of this resource, or would it simply be better to indicate your awareness of the resource with an explanation that time constraints prevented you from including it?        </li>
+        <li> <Strong> Remaining time before deadline:</Strong> How much time is left before you must turn in your project? Is your resource powerful enough to cause you to rethink your approach to your topic? If so, requesting an extension might be in order.</li>
+    </ul>
 </body>
 </html>
