working on the side bar (being realisitc)

--- a/research.html
+++ b/research.html
@@ -20,7 +20,7 @@
           <li><a href=".\placeholder.html">Professionalization</a></li>
         </ul>
       </nav>
-
+<div class="mainBody_Research" style="margin-left: 150px;">
     <h1>Realistic Research: University, Web-based, and Local Resources</h1>
 
     <p> This lesson is meant for students who must begin research in their 
@@ -104,5 +104,10 @@
         <li> <Strong> Time to integrate resource into your project:</Strong> Even if you are able to read the resource, do you have enough time to identify pertinent information and incorporate that information into your project? If your paper is already written, do you have enough time to restructure it to allow for discussion of this resource, or would it simply be better to indicate your awareness of the resource with an explanation that time constraints prevented you from including it?        </li>
         <li> <Strong> Remaining time before deadline:</Strong> How much time is left before you must turn in your project? Is your resource powerful enough to cause you to rethink your approach to your topic? If so, requesting an extension might be in order.</li>
     </ul>
+
+    <div class="sidebar-Beaing_Realisitc"><h2>Being Realistic</h2>
+        <p> <strong> Don't assume that you can read an entire scholarly book in one day. You're only fooling yourself and wasting your precious time if you try to obtain resources that you can't possibly hope to read within your research timeline.</strong></p>
+    </div>
+        
 </body>
 </html>
