--- a/data.html
+++ b/data.html
@@ -6,7 +6,7 @@
     <title>Data</title>
 </head>
 <body>
-
+    <link rel="stylesheet" href="stylingPage.css">
     <nav class="top level nav">
         <ul>
           <li><a href=".\homepage.html">Home</a></li>
@@ -20,7 +20,7 @@
           <li><a href=".\placeholder.html">Professionalization</a></li>
         </ul>
       </nav>
-      
+
     <h1> How to organize and analyze research data</h1>
 </body>
 </html>
