--- a/research.html
+++ b/research.html
@@ -6,7 +6,7 @@
     <title>Research</title>
 </head>
 <body>
-
+    <link rel="stylesheet" href="stylingPage.css">
     <nav class="top level nav">
         <ul>
           <li><a href=".\homepage.html">Home</a></li>
@@ -105,9 +105,29 @@
         <li> <Strong> Remaining time before deadline:</Strong> How much time is left before you must turn in your project? Is your resource powerful enough to cause you to rethink your approach to your topic? If so, requesting an extension might be in order.</li>
     </ul>
 
+    <!-- SideBar-->
     <div class="sidebar-Beaing_Realisitc"><h2>Being Realistic</h2>
         <p> <strong> Don't assume that you can read an entire scholarly book in one day. You're only fooling yourself and wasting your precious time if you try to obtain resources that you can't possibly hope to read within your research timeline.</strong></p>
     </div>
         
+    <h3> Case Study: Example of a Reserach Timeline</h3>
+    <p> Bridgette is a graduate student in the Tech Comm program who has been assigned a literature review and research paper for a graduate course. She's decided to research the development of technical communication as a field between the beginning of the twentieth century up to World War II.</p>
+
+    <p> Her first move is to begin researching by logging into myIIT and searching for articles using scholarly databases like EBSCO and JSTOR. After conducting some research, she finds several articles that are pertinent to her search topic, but are not available as a .pdf download through those databases. She knows that she must decide whether it is worthwhile for her to request those resources or to move on and look for resources that are more easily available. To do this, she constructs a research timeline.</p>
+
+    <p> Having conducted research projects before, she knows that she need not write down her timeline, but she decides to set reasonable goals and record them in her Google calendar so that she has an idea of when certain elements of her project should be completed. She first concludes that she has started with plenty of time to request any resources that she needs to complete the project, and that she will have sufficient time to wait for resources to arrive, read them, and incorporate what she has learned into her paper before she must turn in her final copy. She decides to read these articles when they arrive, and then expand her research to cover her topic as appropriate.    </p>
+
+    <h2> Determining the best way to obtain resources</h2>
+    <p> Even if you can obtain a resource, that doesn't mean you necessarily should spend your time doing so. Be sure to preview a resource by reading a book review or previewing the book on Google Books to make sure that it is valuable enough to obtain. If you have determined that it is feasible and worthwhile to obtain a resource within the timeline you have developed, you must next consider how to obtain that resource. </p>
+    <p> In general, the safest way to obtain resources is to physically obtain a copy yourself. However, that is often inconvenient, impractical, or unnecessary. In cases such as those, interlibrary loan or MyILL is your best option. However, interlibrary loan can take time. Consider these guidelines when requesting your resource through interlibrary loan or MyILL. </p>
+
+    <ul> 
+        <li> <strong> The stated turnaround time </strong> </li>
+        <li> Problems can and do occur in transmitting library materials. For safety's sake, ask yourself the following question: "If it were to take twice as long as the stated turnaround time on the website, would I still have enough time to utilize the research?" Consider all of the factors in the formula above. If not, seek an alternative to interlibrary loan or MyILL.</li>
+        <li> <strong> The proximit of the lending library to your location</strong></li>
+        <li> In the case of MyILL, articles are delivered exclusively online. However, if you are using WorldCat, your lending library may be located in Wisconsin, or it may be located in Canada, or Bulgaria, or Hong Kong. While chapters might be sent electronically, it takes time for books to be delivered from WorldCat libraries. Check the location of the lending library and take it into consideration when requesting materials from WorldCat.        </li>
+        <li> <strong> The possibility that your materials may not arrive before your deadline</strong></li> 
+        <li> Can you complete your project without these materials? If you are still in the planning or topic selection phase, check for these materials and consider whether you will have enough time to utilize them in your project. If not, it would be wise to consider an alternative topic.</li>
+    </ul>
 </body>
 </html>
