--- a/research.html
+++ b/research.html
@@ -23,16 +23,11 @@
 <div class="mainBody_Research" style="margin-left: 150px;">
     <h1>Realistic Research: University, Web-based, and Local Resources</h1>
 
-    <p> This lesson is meant for students who must begin research in their 
-        first semester of the TCID, IA, or the Ph.D. in Technical Communication 
-        program who want to develop, improve, or refresh their research skills. 
-        Additionally, this lesson is designed to give students strategies which 
-        will help them research more efficiently.</p>
+    <p> This lesson is meant for students who must begin research in their first semester of the TCID, IA, or the Ph.D. in Technical Communication program who want to develop, improve, or refresh their research skills. Additionally, this lesson is designed to give students strategies which will help them research more efficiently.</p>
 
     <h2> Content Areas</h2>
 
-    <p> This lesson will help you learn to acquire research resources through a review 
-        of the following areas</p>
+    <p> This lesson will help you learn to acquire research resources through a review of the following areas</p>
 
     <h3> Getting Started</h3>
         <ul> 
@@ -158,5 +153,34 @@
     <div class="sidebar-Beaing_Realisitc2"><h2>Being Realistic</h2>
         <p> <strong>When collecting resources, don't assume that you will remember any of the titles you look up or that you will be able to find them again using past searches. Keep a list of resources on Google Documents or on your flash drive. </strong></p>
     </div>
+
+    <p> If you are confused when using any of the library systems, you can always refer back to the Library FAQ and How-to Pages which have a selection of tutorials explaining the step-by-step instructions for requesting resources. </p>
+
+    <h3> Case Study: Searching and Requesting Resources</h3>
+
+    <p> Bridgette receives the articles that she has requested and reads through them. One of the resources that Jane finds quoted often in academic papers is the 1923 text English for Engineers written by S. A. Harbarger. She decides that this is a useful resource to examine for her project, and makes a note of the title, author, and year in her Google Docs list of resources that she is compiling. After a quick search in I-Share, she notices that it is available at the University of Illinois library in Chicago; she makes a note of this as well in her list of resources. Although she has to work on another project, she knows that she can easily come back to her research notes and resume work.    </p>
+
+    <h2> Local Libraries</h2>
+
+    <p> There are two types of local libraries that may contain your resources:</p>
+
+    <ul> 
+        <li> Other university libraries belonging to I-Share</li>
+        <li> Public libraries</li>
+    </ul>
+
+    <h3> I-Share Libraries</h3>
+
+    <p> Many I-Share libraries will allow you to pull books directly from the shelf and check them out instantaneously so long as you can present your IIT ID card and there are no holds on your library account. Daley Library at the University of Illinois at Chicago (UIC) has an <strong> open stacks</strong> policy. UIC is also a <strong>Research I institution</strong>, so their library is quite extensive.</p>
+
+    <p> Not all area libraries belong to the I-Share system. For instance, Loyola University and the University of Chicago do not participate in I-Share. You may check out books, but only under certain conditions. You may not enter their facilities or browse their collections.</p>
+
+    <p> If you plan on visiting an I-Share library to obtain your resource, consider the following:    </p>
+
+    <!-- SideBar-->
+    <div class="sidebar-Beaing_Realisitc3"><h2>Being Realistic</h2>
+        <p> <strong>Don't waste your research time by making the trip to a library only to find out it is closed for break or you are not allowed to browse the stacks as a non-student. When in doubt, call first.</strong></p>
+    </div>
+
 </body>
 </html>
