--- a/research.html
+++ b/research.html
@@ -182,5 +182,34 @@
         <p> <strong>Don't waste your research time by making the trip to a library only to find out it is closed for break or you are not allowed to browse the stacks as a non-student. When in doubt, call first.</strong></p>
     </div>
 
+    <ul> 
+        <li> <strong> Where is the library located?</strong></li>
+        <li> Will you have to travel outside of Chicago? If so, consider interlibrary loan. </li>
+        <li> <strong> Can you enter the library?</strong></li>
+        <li> Ask if the library is open to the public. Although you are a registered student at an I-Share institution, different libraries have different rules about who can browse their book stacks.</li>
+        <li> <strong> What are the library hours?</strong></li>
+        <li> Not every institution uses the semester system. DePaul University, for instance, uses the quarter system, so their school is closed at different times than IIT. Check the library website to verify hours</li>
+    </ul>
+
+    <h3> Public Libraries</h3>
+    <p> The Chicago Public Library (CPL) system is extensive, and contains a great deal of books that are in popular demand or hard to obtain from I-Share libraries (e.g. textbooks). If you do not live in Chicago, you cannot check books out of the library, but you can visit the library and read or copy the books. Most local libraries have similar policies. Visit a CPL location to obtain a library card (you will need to present proof of residency)</p>
+
+    <h3> Case Study: Obtaining a Resource from an I-Sshare Library</h3>
+    <p> After finishing another project, Bridgette returns to her research paper on Tech Comm prior to World War II. She notices that she had made a note to obtain English for Engineers by S. A. Harbarger, but that was over a week ago and she now only has ten days left to finish her paper. She decides to reassess her research timeline and concludes that she has enough time to read, analyze, and incorporate important elements of this resource into her paper, but in order to do so, she must have the resource and begin working immediately. </p>
+
+    <p>Recognizing the need for an adjustment in the amount of time it takes her to obtain the resource, she decides to attempt to pick up the book herself from a local library. She sees a note she made that the book is available at the UIC library; since she has the title, author, local library, and call number, she is ready to proceed to the library. Prior to leaving, however, she checks the hours and policies of the UIC library on their website so she doesn't waste a trip. </p>
+
+    <h3> When to Use Local Library Resources Instead of Interlibrary Loan</h3>
+
+    <p> There are two situations where you should consider obtaining your resource through a local library rather than relying on interlibrary loan:    </p>
+
+    <ol> 
+        <li> You no longer have enough time to wait for an interlibrary loan book to be delivered</li>
+        <li> You cannot obtain the book through interlibrary loan because it is not available</li>
+    </ol>
+
+    <p> It is important to remember that CPL volumes are not listed in I-Share holdings information. Even though public libraries are located in Illinois, they do not participate in the I-Share system, so you must search at the CPL website to view available titles.</p>
+
+    <p> In the final section of this lesson we'll explore the best way to obtain resources, the internet.</p>
 </body>
 </html>
