--- a/research.html
+++ b/research.html
@@ -211,5 +211,39 @@
     <p> It is important to remember that CPL volumes are not listed in I-Share holdings information. Even though public libraries are located in Illinois, they do not participate in the I-Share system, so you must search at the CPL website to view available titles.</p>
 
     <p> In the final section of this lesson we'll explore the best way to obtain resources, the internet.</p>
+
+    <h2> Internet Resources</h2>
+    <h3> Some resources to consider</h3>
+
+    <p> If you can obtain the same resource online, why request it? Some resources that are available online include:</p>
+
+    <ul> 
+        <li> Public domain writings</li>
+        <li> Resources licensed under Creative Commons</li>
+        <li> Media files such as video, audio, and images</li>
+    </ul>
+
+    <p> In general, if you can avoid making a trip to the library, you can save yourself time when researching</p>
+
+    <h3> Using Web Resources for Research</h3>
+
+    <p> Some web resources can help you find additional resources, such as the following:</p>
+
+    <ul> 
+        <li> <a href="http://scholar.google.com/schhp?hl=en">Google Scholar</a>
+        <li> Allows you to search for scholarly articles and view which articles are cited by other articles</li>
+        <li> <a href="http://books.google.com/books">Google Books</a></li>
+        <li> Allows you to view a preview of a book, or in some cases, the entire book, including the references section</li>
+        <li> <a href="http://thomsonreuters.com/products_services/science/science_products/a-z/web_of_science">Web of Science</a></li>
+        <li> Similar to Google Scholar, but for scientific papers</li>
+    </ul>
+
+    <!-- SideBar-->
+    <div class="sidebar-Beaing_Realisitc4"><h2>Being Realistic</h2>
+        <p> <strong>If you're stuck when researching a topic in Technical Communication, try searching for a special issue, yearbook, or edited volume on your topic. Collections such as these offer you a wealth of resources and represent a snapshot of collective scholarship on a topic, which can help you determine how your own topic relates to that research.</strong></p>
+    </div>
+
+    
+
 </body>
 </html>
