--- a/research.html
+++ b/research.html
@@ -243,7 +243,13 @@
         <p> <strong>If you're stuck when researching a topic in Technical Communication, try searching for a special issue, yearbook, or edited volume on your topic. Collections such as these offer you a wealth of resources and represent a snapshot of collective scholarship on a topic, which can help you determine how your own topic relates to that research.</strong></p>
     </div>
 
-    
+    <h3> Case Study: Using Web Resources</h3>
+
+    <p> Near the completion of her research project, Bridgette starts to question some of the arguments in a central article in her paper, "The Rise of Technical Writing Instruction in America" by R.J. Connors (1982). She wants to see if other researchers have included atypical examples of technical writing instruction in their papers about the rise of Technical Communication as a discipline before World War II. Thinking that most articles written on this topic will have referenced Connors article, she types the title into Google Scholar. She notices that Connors' article has been cited 62 times. From there, she searches the articles that cite Connors' article for the examples she is looking for</p>
+
+    <h3> That's it!</h3>
+
+    <p> Hopefully you learned a little bit about conducting research and obtaining resources. Remember, if you start researching early enough, you are not limited to only those resources that you can find online. Now that you have read these suggestions for researching, please take a short quiz to help you retain some key points from this lesson.</p>
 
 </body>
 </html>
