added more to data page

--- a/placeholder.html
+++ b/placeholder.html
@@ -6,7 +6,8 @@
     <title>Research</title>
 </head>
 <body>
-
+    <link rel="stylesheet" href="stylingPage.css">
+    
     <h1> This is a placehlder page</h1>
     <a href=".\homepage.html"> Return Home</a></li>
     
