--- a/research.html
+++ b/research.html
@@ -250,6 +250,6 @@
     <h3> That's it!</h3>
 
     <p> Hopefully you learned a little bit about conducting research and obtaining resources. Remember, if you start researching early enough, you are not limited to only those resources that you can find online. Now that you have read these suggestions for researching, please take a short quiz to help you retain some key points from this lesson.</p>
-
+</div>
 </body>
 </html>
