--- a/data.html
+++ b/data.html
@@ -20,7 +20,71 @@
           <li><a href=".\placeholder.html">Professionalization</a></li>
         </ul>
       </nav>
-
+<div class="mainBody_Research" style="margin-left: 150px;">
     <h1> How to organize and analyze research data</h1>
+
+    <!-- SideBar-->
+    <div class="sidebar-data1">
+        <p> <strong>For this lesson, you'll need the following:</strong></p>
+        <ul> 
+            <li> <strong> Microsoft Excel</strong></li>
+            <li> <strong> PASW (formerly SPSS) statistics software, or free trial download </strong></li>
+        </ul>
+
+        <p><strong> You should already be familiar with:</strong></p>
+        <ul> 
+            <li> <strong> The basic functions and tools of Excel</strong></li>
+            <li> <strong> Descriptive statistics and inferential statistics</strong></li>
+            <li> <strong> Research design and how to identify independent variables and dependent variables</strong></li>
+        </ul>
+    </div>
+
+    <p> This short lesson is intended for graduate and advanced undergraduate students undertaking original research projects. After completing the 30-minute lesson, you will be able to to:    </p>
+
+    <ul> 
+        <li>Format raw research data in an Excel spreadsheet for efficient analysis </li>
+        <li> Run basic descriptive statistics in Excel</li>
+        <li> Prepare the document for statistical analysis in the software package PASW</li>
+    </ul>
+
+    <h2> Format Data for Analysis</h2>
+
+    <p>Make sure the computer you are working on has Microsoft Excel installed. Open the document  <a href="https://docs.google.com/spreadsheets/d/1oFic8Mh2MLJrcKeostXoGZ7XIltF6Dzg/edit?usp=sharing&ouid=105328743048500577579&rtpof=true&sd=true">ToolBox_DataLesson.xls</a> in Excel and follow along with the lesson, taking action as instructed.
+        In the Raw_Dataset spreadsheet, the name of each variable has been entered in the first row of each column. </p>
+
+    <ol> 
+        <li> Each variable name must be different from other variable names.</li>
+        <li> The first variable (in column A) is a <strong> unique identifier.</strong></li>
+        <li> Variable names must start with a letter (not numbers or special characters), so change 4tutorial_types to tutorial_types.        </li>
+        <li> Name variables so that they are intuitive to you. Therefore, change use and useful to perc_ease_of_use and perc_usefulness, respectively.        </li>
+        <li> Your spreadsheet should look like Figure 1, and it should now be readily apparent that Column F refers to Perceived Usefulness and Column G refers to Perceived Ease of Use.</li>
+    </ol>  
+
+    <!-- Image[datalesson_fig3.jpg]-->
+    <figure> 
+        <img src="datalesson_fig3.png" alt="Old style excel sheet filled with values"/>
+        <figcaption> Tutorial type, gender, experience, and task categorical values have been formatted as dichotomous variables. </figcaption>
+    </figure>
+
+    <p> Data values, or rows, have been input for each subject in the experiment.</p>
+
+    <ol>
+        <li> Decide on input conventions and stick to them. In gender, change the "female" value to "F".</li>
+        <li> Separate data into component values whenever possible by adding new columns. For example, tasks_completed values (Y/Y/N) can be broken up into three components. So, add columns task1, task2, and task3, and reformat values appropriately.        </li>
+        <li> Double-check to ensure no data entry errors have been made, then delete the old tasks_completed column.</li>
+        <li> Your Raw_Dataset spreadsheet should now look like Figure 2</li>
+    </ol>
+
+    <!-- Image[datalesson_fig2.jpg]-->
+    <figure> 
+        <img src="datalesson_fig2.png" alt="Old style excel sheet filled with values"/>
+        <figcaption> Values for each variable are entered in a consistent format. </figcaption>
+    </figure>
+
+    <p> Replace categorical data values with "0" or "1" (0=no, 1=yes) to indicate whether or not the value is represented for the given subject/item. This makes the categorical values <strong>dichotomous</strong>, which gives the researcher maximum flexibility in testing for relationships or correlations.    </p>
+
+    
+
+</div>
 </body>
 </html>
