--- a/data.html
+++ b/data.html
@@ -83,7 +83,25 @@
 
     <p> Replace categorical data values with "0" or "1" (0=no, 1=yes) to indicate whether or not the value is represented for the given subject/item. This makes the categorical values <strong>dichotomous</strong>, which gives the researcher maximum flexibility in testing for relationships or correlations.    </p>
 
-    
+        <!-- SideBar-->
+        <div class="sidebar-data2">
+            <p><strong>Dichotomous variables allow for the easy isolation of characteristics for analysis. For example, separating experience levels allows the researcher to test in PASW whether subjects with low experience have perceived ease of use scores significantly different from those with medium and high experience levels.</strong></p>
+        </div>
+
+        <ol> 
+            <li> Copy the Raw_Dataset values into the Sheet2 tab. Rename this sheet Formatted_Data </li>
+            <li> In the Formatted_Data sheet, add new columns with <strong> Insert > Columns </strong> for each distinct value in categorical data columns (tutorial_types, gender, exp_level, task1, task2, and task3). You do not have to add a new column for task1, task2, and task3 because their values are already dichotomous.            </li>
+            <li> Rename columns according to each possible categorical value. Copy and paste the values from the original column.</li>
+            <li>Replace dichotomous data values with "0" or "1" (0=no, 1=yes) using the replace function: <strong>Edit > Replace. </strong>  </li>
+            <li> Your Formatted_Data spreadsheet should now look like Figure 3.</li>
+        </ol>
+
+        <!-- Image[datalesson_fig3(1).png]-->
+    <figure> 
+        <img src="datalesson_fig3(1).png" alt="Old style excel sheet filled with values"/>
+        <figcaption> Tutorial type, gender, experience, and task categorical values have been formatted as dichotomous variables. </figcaption>
+    </figure>
+
 
 </div>
 </body>
