--- a/data.html
+++ b/data.html
@@ -98,11 +98,26 @@
 
         <!-- Image[datalesson_fig3(1).png]-->
     <figure> 
-        <img src="datalesson_fig3(1).png" alt="Old style excel sheet filled with values"/>
+        <img src="datalesson_fig3.png" alt="Old style excel sheet filled with values"/>
         <figcaption> Tutorial type, gender, experience, and task categorical values have been formatted as dichotomous variables. </figcaption>
     </figure>
 
+    <h2> Run Descriptive Statistics</h2>
 
+    <!-- SideBar-->
+    <div class="sidebar-data3">
+        <p><strong> Analyzing descriptive statistics may lead you to ask new questions. For example, perc_enjoy is much higher on average than perc_usefulness, which also has a large variance. This suggests that a segment of users may not have considered the system useful even though they enjoyed using it.</strong></p>
+    </div>
+
+    <p> Run descriptive (summary) statistics on the dataset and output results in a new spreadsheet. If necessary, rearrange columns so that data requiring summary, those with <strong>continuous</strong> values, are adjacent. (In the spreadsheet, the continuous values of perc_enjoy, perc_usefulness, and perc_ease_of_use are already adjacent.)</p>
+
+    <p> Write down the "input range" (i.e. H2:J26) of the data requiring summary, making sure not to include variable labels.</p>
+
+    <ol> 
+        <li> Go to <strong>Tools > Add-Ins...</strong> and make sure <strong> Analysis ToolPak</strong> is checked. Click OK.</li>
+        <li> Go to <strong>Tools > Data Analysis</strong> and select <strong>Descriptive Statistics</strong>. Click OK. </li>
+        <li> Enter the input range in the blank and check <strong>Summary Statistics. </strong> Click OK.        </li>
+    </ol>
 </div>
 </body>
 </html>
