--- a/data.html
+++ b/data.html
@@ -118,6 +118,56 @@
         <li> Go to <strong>Tools > Data Analysis</strong> and select <strong>Descriptive Statistics</strong>. Click OK. </li>
         <li> Enter the input range in the blank and check <strong>Summary Statistics. </strong> Click OK.        </li>
     </ol>
+
+    <p>  The descriptive statistics summary will output in a new sheet. Rename this spreadsheet Descriptive_Stats. Label the output according to the variables. For example, Column 1 should be perc_enjoy. Your Descriptive_Stats spreadsheet should now look like Figure 4.Analyzing descriptive statistics is a great way to start appraising a dataset before running inferential statistics. What insights about the dataset can you glean from the summary statistics for perc_usefulness and perc_ease_of_use? </p>
+
+    <!-- Image[datalesson_fig4.png]-->
+     <figure> 
+        <img src="datalesson_fig4.png" alt="Old style excel sheet filled with values"/>
+        <figcaption> Excel will not run descriptive statistics with non-numeric characters, so the variable labels must be re-entered. </figcaption>
+     </figure>
+
+
+     <h2> Run Inferential Statistics</h2>
+     
+     <p> Open PASW and upload the spreadsheet. (IIT labs in Stuart Building, room 112, have PASW. You can also download a 30-day free trial.)</p>
+
+     <ol> 
+        <li> When PASW starts, it will prompt you for a data source. Select <strong>Open an existing data source > More Files...</strong></li>
+        <li> Set the file type to Excel, then find and open the file.</li>
+        <li> From the list, select the Formatted_Data worksheet. Click OK. You should now see the dataset.</li>
+     </ol>
+
+     <p>The most commonly used statistical methods and tests are found under the <strong> Analyze </strong> menu in the standard toolbar. </p>
+
+     <p>Figure 5 shows where to find some common statistical methods and tests. Under PASW's  Analyze , see if you can also find the following:</p>
+
+     <ol> 
+        <li> Wilcoxon-Mann-Whitney test</li>
+        <li> Simple linear regression</li>
+        <li> Non-parametric correlation</li>
+     </ol>
+
+     <!-- Image[datalesson_fig5.png]-->
+     <figure> 
+        <img src="datalesson_fig5.png" alt="Old style excel sheet filled with values"/>
+        <figcaption> Don't assume PASW doesn't run a given test. Many are located under broader statistical classifications.</figcaption>
+     </figure>
+
+    <p> Use your prior knowledge or the <a href="http://www.ats.ucla.edu/stat/mult_pkg/whatstat/default.htm">Choosing the Correct Statistic</a>  resource to determine which statistic to run to find whether there is a significant difference in perc_usefulness between free_play and other tutorial types.</p>
+
+    <!-- SideBar-->
+    <div class="sidebar-data4">
+        <p><strong> Consult <a href="http://www.ats.ucla.edu/stat/mult_pkg/whatstat/default.htm">UCLA's Choosing the Correct Statistic</a> to ensure the statistical anlaysis is appropriate for your research question(s), variables of interest, and associated data types.</strong></p>
+    </div>
+
+    <p> You should have determined that the Kruskal-Wallis one-way analysis of variance is the appropriate test. Go to <strong> Analyze > Nonparametric Tests > K Independent Samples... </strong> A new window will open prompting you to select the variables (by column name) to be tested.    </p>
+
+    <ol> 
+        <li> Select the perc_usefulness variable from the scrollable list on the left, and click the top arrow to move it to the Test Variable List (i.e. dependent variable).        </li>
+        <li> Select the free_play variable from the scrollable list, and click the bottom arrow to move it to the Grouping Variable section (i.e. independent variable).</li>
+        <li> Click <strong>  Define Range...</strong>, and enter "0" in the Minimum field and "1" in the Maximum field. This specifies the two categorical variables to be tested. Your screen should now look like Figure 6. Click Continue</li>
+    </ol>
 </div>
 </body>
 </html>
