--- a/data.html
+++ b/data.html
@@ -168,6 +168,23 @@
         <li> Select the free_play variable from the scrollable list, and click the bottom arrow to move it to the Grouping Variable section (i.e. independent variable).</li>
         <li> Click <strong>  Define Range...</strong>, and enter "0" in the Minimum field and "1" in the Maximum field. This specifies the two categorical variables to be tested. Your screen should now look like Figure 6. Click Continue</li>
     </ol>
+
+    <!-- Image[datalesson_fig6.png]-->
+    <figure> 
+        <img src="datalesson_fig6.png" alt="Old style excel sheet filled with values"/>
+        <figcaption> For Kruskal-Wallis, an independent (free_play) and a dependent variable (perc_usefulness) are selected.</figcaption>
+     </figure>
+
+     <p>Click OK to display the statistical analysis results to new viewing window. Your results screen should look like Figure 7. Because statistical analysis output contains many numerical components (some of which must be cited in formal reports), it is a good idea to save it to a format independent of the PASW software. To save the results, go to <strong>File > Export. </strong> Change Document Type to the desired output format (Word, Excel, PDF, etc.), then click OK </p>
+
+      <!-- Image[datalesson_fig7.png]-->
+      <figure> 
+        <img src="datalesson_fig7.png" alt="Old style excel sheet filled with values"/>
+        <figcaption> PASW allows users to export statistics to common document types</figcaption>
+     </figure>  
+     
+     
+
 </div>
 </body>
 </html>
