added test your knowlede sectionto data page

--- a/data.html
+++ b/data.html
@@ -183,7 +183,9 @@
         <figcaption> PASW allows users to export statistics to common document types</figcaption>
      </figure>  
      
-     
+     <h3> Test your knowledge</h3>
+
+     <p>Now that you've finished the lesson, please complete a short quiz to test your understanding of formatting research datasets for comprehensive statistical analysis. </p>
 
 </div>
 </body>
