--- a/homepage.html
+++ b/homepage.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <link rel="stylesheet" href="stylingPage.css">
-    <nav class="top level nav">
+    <nav class="top level_nav">
         <ul>
           <li><a href=".\homepage.html">Home</a></li>
           <li><a href=".\placeholder.html">Topic</a></li>
