--- a/research.html
+++ b/research.html
@@ -9,15 +9,15 @@
     <link rel="stylesheet" href="stylingPage.css">
     <nav class="top level_nav">
         <ul>
-          <li><a href=".\homepage.html">Home</a></li>
-          <li><a href=".\placeholder.html">Topic</a></li>
-          <li><a href=".\research.html">Research</a></li>
-          <li><a href=".\data.html">Data</a></li>
-          <li><a href=".\placeholder.html">References</a></li>
-          <li><a href=".\placeholder.html">Style</a></li>
-          <li><a href=".\placeholder.html">Layout</a></li>
-          <li><a href=".\placeholder.html">Modality</a></li> 
-          <li><a href=".\placeholder.html">Professionalization</a></li>
+          <li><a href="homepage.html">Home</a></li>
+          <li><a href="placeholder.html">Topic</a></li>
+          <li><a href="research.html">Research</a></li>
+          <li><a href="data.html">Data</a></li>
+          <li><a href="placeholder.html">References</a></li>
+          <li><a href="placeholder.html">Style</a></li>
+          <li><a href="placeholder.html">Layout</a></li>
+          <li><a href="placeholder.html">Modality</a></li> 
+          <li><a href="placeholder.html">Professionalization</a></li>
         </ul>
       </nav>
 <div class="mainBody_Research" style="margin-left: 150px;">
@@ -73,7 +73,7 @@
 
     <!-- Image[Reserach2.jpg]-->
     <figure>
-        <img src="research2.jpg" alt="Illinois Institute of Technology Library Website " />
+        <img src="research2.jpg" alt="Illinois Institute of Technology Library Website " >
         <figcaption>The Library Services icon leads you to the library search website</figcaption>
       </figure>
 
@@ -89,7 +89,7 @@
 
     <p> It is important to first consider your due date when thinking about requesting resources. You must have enough time to read the material, integrate it into your project or paper, and still have time to finish your assignment. In general, consider this formula when determining whether it is realistic to use a resource for your paper:    </p>
 
-    <p> <strong> Time to obtain resource + Time to read resource + Time to integrate resource into your project < Remaining time before deadline</strong></p>
+    <p> <strong> Time to obtain resource + Time to read resource + Time to integrate resource into your project &lt; Remaining time before deadline</strong></p>
 
     <p> Let's unpack some of those terms</p>
 
@@ -132,14 +132,14 @@
 
     <!-- Image[reserach4_image1.jpg]-->
     <figure>
-        <img src="research4_image1.jpg" alt="Academic Website with searth no yielding any results " />
+        <img src="research4_image1.jpg" alt="Academic Website with searth no yielding any results " >
       </figure>
 
     <p> Clicking on the Get Article link will direct you to a page like this, where you will either be able to retrieve the article through another web site or where you will request the article through your myILL account.</p>
 
     <!-- Image[reserach4_image2.jpg]-->
     <figure> 
-        <img src="research4_image2.jpg" alt="Illinois Institute of Technology Library Website"/>
+        <img src="research4_image2.jpg" alt="Illinois Institute of Technology Library Website">
         <figcaption> For this resource, the only option is to request the article through MyILL </figcaption>
     </figure>
 
