fixed errors in html validator

--- a/data.html
+++ b/data.html
@@ -9,15 +9,15 @@
     <link rel="stylesheet" href="stylingPage.css">
     <nav class="top level_nav">
         <ul>
-          <li><a href=".\homepage.html">Home</a></li>
-          <li><a href=".\placeholder.html">Topic</a></li>
-          <li><a href=".\research.html">Research</a></li>
-          <li><a href=".\data.html">Data</a></li>
-          <li><a href=".\placeholder.html">References</a></li>
-          <li><a href=".\placeholder.html">Style</a></li>
-          <li><a href=".\placeholder.html">Layout</a></li>
-          <li><a href=".\placeholder.html">Modality</a></li> 
-          <li><a href=".\placeholder.html">Professionalization</a></li>
+          <li><a href="homepage.html">Home</a></li>
+          <li><a href="placeholder.html">Topic</a></li>
+          <li><a href="research.html">Research</a></li>
+          <li><a href="data.html">Data</a></li>
+          <li><a href="placeholder.html">References</a></li>
+          <li><a href="placeholder.html">Style</a></li>
+          <li><a href="placeholder.html">Layout</a></li>
+          <li><a href="placeholder.html">Modality</a></li> 
+          <li><a href="placeholder.html">Professionalization</a></li>
         </ul>
       </nav>
 <div class="mainBody_Research" style="margin-left: 150px;">
@@ -62,7 +62,7 @@
 
     <!-- Image[datalesson_fig3.jpg]-->
     <figure> 
-        <img src="datalesson_fig3.png" alt="Old style excel sheet filled with values"/>
+        <img src="datalesson_fig3.png" alt="Old style excel sheet filled with values">
         <figcaption> Tutorial type, gender, experience, and task categorical values have been formatted as dichotomous variables. </figcaption>
     </figure>
 
@@ -77,7 +77,7 @@
 
     <!-- Image[datalesson_fig2.jpg]-->
     <figure> 
-        <img src="datalesson_fig2.png" alt="Old style excel sheet filled with values"/>
+        <img src="datalesson_fig2.png" alt="Old style excel sheet filled with values">
         <figcaption> Values for each variable are entered in a consistent format. </figcaption>
     </figure>
 
@@ -98,7 +98,7 @@
 
         <!-- Image[datalesson_fig3(1).png]-->
     <figure> 
-        <img src="datalesson_fig3.png" alt="Old style excel sheet filled with values"/>
+        <img src="datalesson_fig3.png" alt="Old style excel sheet filled with values">
         <figcaption> Tutorial type, gender, experience, and task categorical values have been formatted as dichotomous variables. </figcaption>
     </figure>
 
@@ -123,7 +123,7 @@
 
     <!-- Image[datalesson_fig4.png]-->
      <figure> 
-        <img src="datalesson_fig4.png" alt="Old style excel sheet filled with values"/>
+        <img src="datalesson_fig4.png" alt="Old style excel sheet filled with values">
         <figcaption> Excel will not run descriptive statistics with non-numeric characters, so the variable labels must be re-entered. </figcaption>
      </figure>
 
@@ -150,7 +150,7 @@
 
      <!-- Image[datalesson_fig5.png]-->
      <figure> 
-        <img src="datalesson_fig5.png" alt="Old style excel sheet filled with values"/>
+        <img src="datalesson_fig5.png" alt="Old style excel sheet filled with values">
         <figcaption> Don't assume PASW doesn't run a given test. Many are located under broader statistical classifications.</figcaption>
      </figure>
 
@@ -171,7 +171,7 @@
 
     <!-- Image[datalesson_fig6.png]-->
     <figure> 
-        <img src="datalesson_fig6.png" alt="Old style excel sheet filled with values"/>
+        <img src="datalesson_fig6.png" alt="Old style excel sheet filled with values">
         <figcaption> For Kruskal-Wallis, an independent (free_play) and a dependent variable (perc_usefulness) are selected.</figcaption>
      </figure>
 
@@ -179,7 +179,7 @@
 
       <!-- Image[datalesson_fig7.png]-->
       <figure> 
-        <img src="datalesson_fig7.png" alt="Old style excel sheet filled with values"/>
+        <img src="datalesson_fig7.png" alt="Old style excel sheet filled with values">
         <figcaption> PASW allows users to export statistics to common document types</figcaption>
      </figure>  
      
