--- a/placeholder.html
+++ b/placeholder.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="stylingPage.css">
     
     <h1> This is a placehlder page</h1>
-    <a href=".\homepage.html"> Return Home</a></li>
+    <a href="homepage.html"> Return Home</a>
     
 </body>
 </html>
