nav looks better

--- a/homepage.html
+++ b/homepage.html
@@ -3,22 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylingPage.css">
     <title>Homepage</title>
 </head>
 <body>
-    <link rel="stylesheet" href="stylingPage.css">
-    <nav class="top level_nav">
-        <ul>
-          <li><a href="homepage.html">Home</a></li>
-          <li><a href="placeholder.html">Topic</a></li>
-          <li><a href="research.html">Research</a></li>
-          <li><a href="data.html">Data</a></li>
-          <li><a href="placeholder.html">References</a></li>
-          <li><a href="placeholder.html">Style</a></li>
-          <li><a href="placeholder.html">Layout</a></li>
-          <li><a href="placeholder.html">Modality</a></li> 
-          <li><a href="placeholder.html">Professionalization</a></li>
-        </ul>
+    <nav class="top_level_nav">
+          <a href="homepage.html">Home</a>
+          <a href="placeholder.html">Topic</a>
+          <a href="research.html">Research</a>
+          <a href="data.html">Data</a>
+          <a href="placeholder.html">References</a>
+          <a href="placeholder.html">Style</a>
+          <a href="placeholder.html">Layout</a>
+          <a href="placeholder.html">Modality</a>
+          <a href="placeholder.html">Professionalization</a>
       </nav>
       
     <h1> The Research ToolBox</h1>
