included template page

--- a/placeholder.html
+++ b/placeholder.html
@@ -19,8 +19,30 @@
         <a href="placeholder.html">Professionalization</a>
     </nav>
 
+    <div class="sidebar"></div>
+
+    <div class="mainBody_Research" style="margin-left: 210px;">
     <h1> This is a placehlder page</h1>
     
+    <br> <br>
+
+    <h2> This is also a template page</h2>
+
+    <!-- insert image with caption]
+    <figure> 
+        <img src="url" alt="description of img">
+        <figcaption> caption </figcaption>
+    </figure>
     
+    --> 
+
+
+    <!-- SideBar
+    <div class="sidebar_main">
+        <p>insert contnet here</p>
+    </div>
+
+    -->
+    </div>
 </body>
 </html>
